hero section responsive

--- a/student-portfolio.html
+++ b/student-portfolio.html
@@ -23,20 +23,23 @@
 
 	<div class="hero">
 		<nav>
-			<h2 class="logo">Cassidy Ng</h2>
+            <div>
+			    <h2 class="logo"><i class="fa fa-code" aria-hidden="true"></i> Cassidy Ng</h2>
+            </div>
 			<ul>
 				<li><a href="#">Home</a></li>
 				<li><a href="#">About Us</a></li>
 				<li><a href="#">Projects</a></li>
+                <a href="#" class="btn">Get in Touch</a>
 			</ul>
-			<a href="#" class="btn">Get in Touch</a>
+			
 		</nav>
 
 		<div class="selfIntro">
-			<h4>Hey! I'm Cassidy Ng</h4>
+			<h4>Hey! I'm Cassidy</h4>
 			<h1>A Junior Software Developer based in Austin, TX.</h1>
-			
-			<a href="#" class="btn">Take a look at my work</a>
+			<br>
+			<a href="#" class="btn1">Take a look at my work</a>
 		</div>
 	</div>
 
